--- a/roles/provision_openstack_infra/tasks/network.yml
+++ b/roles/provision_openstack_infra/tasks/network.yml
@@ -35,6 +35,14 @@
     network_name: openstack-int-network
     name: openstack-int-subnet
     cidr: 20.20.20.0/24
+    dns_nameservers:
+       - 8.8.8.7
+       - 8.8.8.8
+    host_routes:
+       - destination: 0.0.0.0/0
+         nexthop: 192.168.0.0
+       - destination: 192.168.0.0/24
+         nexthop: 192.168.0.0
 
 - name: Create a router to connect between the private network and your internal physical network
   os_router:
